// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`junction emission snapshot — opportunity_activity (clean-lite-ps) emits opportunity_activity.entity.ts 1`] = `
"// @generated by @pattern-stack/codegen from junctions/opportunity_activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use the junction YAML.
import {
  boolean,
  numeric,
  pgTable,
  primaryKey,
  text,
  timestamp,
  uuid,
} from 'drizzle-orm/pg-core';
import { relations, type InferSelectModel } from 'drizzle-orm';
import { opportunities } from '../opportunities/opportunity.entity';
import { activities } from '../activities/activity.entity';

// ============================================================================
// Enums
// ============================================================================

// ============================================================================
// Table
// ============================================================================

export const opportunityActivities = pgTable(
  'opportunity_activities',
  {
    // FK columns — composite primary key (no surrogate id: Q4 resolution)
    opportunityId: uuid('opportunity_id').notNull().references(() => opportunities.id, { onDelete: 'restrict' }),
    activityId: uuid('activity_id').notNull().references(() => activities.id, { onDelete: 'restrict' }),

    // BaseJunctionFields — is_primary is always emitted
    isPrimary: boolean('is_primary').notNull().default(false),

    // Temporal window (temporal: true, default)
    startedAt: timestamp('started_at'),
    endedAt: timestamp('ended_at'),

    // Provenance (sourced: true, default)
    sourcedFrom: text('sourced_from'),
    confidence: numeric('confidence', { precision: 5, scale: 4 }),
    matchedAt: timestamp('matched_at'),

    // Timestamps
    createdAt: timestamp('created_at').notNull().defaultNow(),
    updatedAt: timestamp('updated_at').notNull().defaultNow(),
  },
  (table) => [
    // Composite primary key on the two FK columns (Q4 resolution: no surrogate id)
    primaryKey({ columns: [table.opportunityId, table.activityId] }),
  ],
);

export type OpportunityActivity = InferSelectModel<typeof opportunityActivities>;
export type OpportunityActivityInsert = typeof opportunityActivities.$inferInsert;

// ============================================================================
// Relations — extension-path metadata for db.query.X.findMany({ with: ... })
// Generated code does NOT consume these; they exist for hand-written admin
// queries and for #60's fan-out methods once they land.
// ============================================================================

export const opportunityActivitiesRelations = relations(opportunityActivities, ({ one }) => ({
  opportunity: one(opportunities, {
    fields: [opportunityActivities.opportunityId],
    references: [opportunities.id],
  }),
  activity: one(activities, {
    fields: [opportunityActivities.activityId],
    references: [activities.id],
  }),
}));
"
`;

exports[`junction emission snapshot — opportunity_activity (clean-lite-ps) emits opportunity_activity.repository.ts 1`] = `
"// @generated by @pattern-stack/codegen from junctions/opportunity_activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use the junction YAML.
import { Injectable, Inject } from '@nestjs/common';
import { eq } from 'drizzle-orm';
import { DRIZZLE } from '@shared/constants/tokens';
import type { DrizzleClient } from '@shared/types/drizzle';
import { BaseRepository } from '@shared/base-classes/base-repository';
import { opportunityActivities, type OpportunityActivity } from './opportunity_activity.entity';

@Injectable()
export class OpportunityActivityRepository extends BaseRepository<OpportunityActivity> {
  readonly table = opportunityActivities;

  // Junctions track temporal validity via started_at / ended_at, NOT via
  // deleted_at. is_primary flips replace soft-delete semantics (Q5 resolution).
  protected override readonly behaviors = {
    timestamps: true,
    softDelete: false,
    userTracking: false,
  };

  constructor(@Inject(DRIZZLE) db: DrizzleClient) {
    super(db);
  }

  // ═══════════════════════════════════════════════════════════════════════════
  // Pairing-aware finders — hardcoded in v1 (Q2 resolution: no declarative
  // queries block on junctions; every junction needs exactly these two methods).
  // ═══════════════════════════════════════════════════════════════════════════

  /**
   * Fetch all junction rows where opportunity_id matches.
   *
   * Pagination shape: { cursor?, limit? } — canonical per cgp-62 r4.
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findByOpportunityId(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityActivity[]> {
    const rows = await this.baseQuery()
      .where(eq(this.table.opportunityId, opportunityId))
      .limit(opts?.limit ?? 100);
    return rows as OpportunityActivity[];
  }

  /**
   * Fetch all junction rows where activity_id matches.
   *
   * Pagination shape: { cursor?, limit? } — canonical per cgp-62 r4.
   * FIXME: align with codegen-patterns#358 pagination shape if it diverges.
   */
  async findByActivityId(
    activityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityActivity[]> {
    const rows = await this.baseQuery()
      .where(eq(this.table.activityId, activityId))
      .limit(opts?.limit ?? 100);
    return rows as OpportunityActivity[];
  }

  // Inherited from BaseRepository:
  //   findById, findByIds, list, count, exists, create, update, delete, upsertMany
}
"
`;

exports[`junction emission snapshot — opportunity_activity (clean-lite-ps) emits opportunity_activity.service.ts 1`] = `
"// @generated by @pattern-stack/codegen from junctions/opportunity_activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use the junction YAML.
import { Injectable, Inject, Optional } from '@nestjs/common';
import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { BaseService } from '@shared/base-classes/base-service';
import { OpportunityActivityRepository } from './opportunity_activity.repository';
import type { OpportunityActivity } from './opportunity_activity.entity';
import { OpportunityRepository } from '../opportunities/opportunity.repository';
import type { Opportunity } from '../opportunities/opportunity.entity';
import { ActivityRepository } from '../activities/activity.repository';
import type { Activity } from '../activities/activity.entity';

/**
 * Pick of the link-side mutable fields that callers may supply when
 * attaching. Subset of \`OpportunityActivity\` minus the two FK columns
 * (those come from the method args).
 */
export type OpportunityActivityLinkInput = Partial<
  Pick<OpportunityActivity,
    'isPrimary' | 'startedAt' | 'endedAt' | 'sourcedFrom' | 'confidence' | 'matchedAt'
  >
>;

@Injectable()
export class OpportunityActivityService extends WithAnalytics(
  BaseService<OpportunityActivityRepository, OpportunityActivity>,
) {
  protected override readonly entityName = 'opportunity_activity';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: OpportunityActivityRepository,
    private readonly opportunityRepo: OpportunityRepository,
    private readonly activityRepo: ActivityRepository,
  ) {
    super(repository);
  }

  // Pairing-aware pass-throughs — mirror the repo's two finders so use-cases
  // and #60's fan-out methods both delegate through the service layer, keeping
  // analytics/events instrumentation uniform (per relationship's service.ejs.t).

  /**
   * Fetch all junction rows for a given opportunity_id.
   */
  async findByOpportunityId(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityActivity[]> {
    return this.repository.findByOpportunityId(opportunityId, opts);
  }

  /**
   * Fetch all junction rows for a given activity_id.
   */
  async findByActivityId(
    activityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<OpportunityActivity[]> {
    return this.repository.findByActivityId(activityId, opts);
  }

  // ═══════════════════════════════════════════════════════════════════════
  // CGP-60 — canonical fan-out methods
  // Mirrored, paginated, composed \`{ entity, link }\` shape. Always emitted
  // on the junction service; parent-side \`attach<Right>\` / \`addTo<Left>\` /
  // etc. inject templates delegate here. \`list\` is implemented with two
  // single-table queries (no Drizzle \`with:\`).
  // ═══════════════════════════════════════════════════════════════════════

  /**
   * Create a junction row linking a opportunity and a activity.
   * Returns the persisted row.
   *
   * **Idempotency:** NOT idempotent at the service layer in v1. A duplicate
   * pair raises the DB-level composite-PK unique-constraint error from the
   * underlying repository's \`create\`. Callers requiring idempotency should
   * either check existence via \`findByOpportunityId\` + filter,
   * or wrap the call in try/catch on the unique-violation error. A future
   * leaf may add a transactional check-then-create here if a consumer
   * surfaces the need (track as a follow-up if so).
   */
  async attach(
    opportunityId: string,
    activityId: string,
    link?: OpportunityActivityLinkInput,
  ): Promise<OpportunityActivity> {
    return this.create({
      opportunityId: opportunityId,
      activityId: activityId,
      ...(link ?? {}),
    } as unknown as Partial<OpportunityActivity>);
  }

  /**
   * Remove the junction row linking \`opportunityId\` and
   * \`activityId\`. No-op if no row exists.
   */
  async detach(
    opportunityId: string,
    activityId: string,
  ): Promise<void> {
    const links = await this.repository.findByOpportunityId(opportunityId);
    const match = links.find(
      (l) => (l as any).activityId === activityId,
    );
    if (match) {
      await this.delete((match as any).id ?? \`\${opportunityId}:\${activityId}\`);
    }
  }

  /**
   * List the targets associated with one side of the junction, composed as
   * \`{ entity, link }\`. Implementation: one repo call for the links, one
   * \`findByIds\` call for the targets — no SQL JOIN. Cursor pagination by
   * right-entity \`id\` (matches CGP-358 has_many shape; time-ordered cursor
   * is deferred per spec Open Q3).
   */
  async listAssoc(
    side: 'left' | 'right',
    anchorId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<Array<{ entity: Opportunity | Activity; link: OpportunityActivity }>> {
    if (side === 'left') {
      const links = await this.repository.findByOpportunityId(anchorId, opts);
      const targetIds = links.map((l) => (l as any).activityId as string);
      const targets = await this.activityRepo.findByIds(targetIds);
      const byId = new Map(targets.map((t) => [(t as any).id, t]));
      return links.map((link) => ({
        entity: byId.get((link as any).activityId)! as Activity,
        link,
      }));
    } else {
      const links = await this.repository.findByActivityId(anchorId, opts);
      const targetIds = links.map((l) => (l as any).opportunityId as string);
      const targets = await this.opportunityRepo.findByIds(targetIds);
      const byId = new Map(targets.map((t) => [(t as any).id, t]));
      return links.map((link) => ({
        entity: byId.get((link as any).opportunityId)! as Opportunity,
        link,
      }));
    }
  }

  /**
   * Mark the (\`opportunityId\`, \`activityId\`) row
   * as \`is_primary: true\`. Demoting other rows on the same side is the
   * caller's concern in v1; future leaves may add transactional demotion.
   */
  async setPrimary(
    opportunityId: string,
    activityId: string,
  ): Promise<void> {
    const links = await this.repository.findByOpportunityId(opportunityId);
    const match = links.find(
      (l) => (l as any).activityId === activityId,
    );
    if (match) {
      await this.update(
        (match as any).id ?? \`\${opportunityId}:\${activityId}\`,
        { isPrimary: true } as unknown as Partial<OpportunityActivity>,
      );
    }
  }

  // Inherited from BaseService:
  //   findById, findByIds, list, count, exists, create, update, delete
}
"
`;

exports[`junction emission snapshot — opportunity_activity (clean-lite-ps) emits opportunity.service.ts (left parent — junction accessor) 1`] = `
"// @generated by @pattern-stack/codegen from entities/opportunity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use a pattern (src/patterns/*.pattern.ts) or the entity YAML.
import { Injectable, Inject, Optional } from '@nestjs/common';
// CGP-60 — junction service + types
import { OpportunityActivityService, OpportunityActivityLinkInput } from '../opportunity_activities/opportunity_activity.service';
import type { OpportunityActivity } from '../opportunity_activities/opportunity_activity.entity';

// CGP-60 — forwardRef resolves circular module dep (junction → parent)
import { forwardRef } from '@nestjs/common';

import type { Activity } from '../activities/activity.entity';

import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { SyncedEntityService } from '@shared/base-classes/synced-entity-service';
import { OpportunityRepository } from './opportunity.repository';
import type { Opportunity } from './opportunity.entity';

@Injectable()
export class OpportunityService extends WithAnalytics(
  SyncedEntityService<OpportunityRepository, Opportunity>,
) {
  protected override readonly entityName = 'opportunity';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: OpportunityRepository,
  ) {
    super(repository);
  }

  // Lifecycle events (created/updated/deleted + per-field changes) are emitted
  // automatically by BaseService when the events subsystem is installed.
  //
  // ═══════════════════════════════════════════════════════════════════════
  // CGP-60 — fan-out to Activity (junction: opportunity_activity)
  // Delegates to OpportunityActivityService. Per-junction marker keeps
  // idempotency; multiple junctions on the same parent each emit their own
  // block. \`forwardRef\` resolves the circular module import (parent module
  // imports junction module; junction module imports parent modules for
  // repo DI).
  // ═══════════════════════════════════════════════════════════════════════
  // junction:opportunity_activity:left-fan-out

  @Inject(forwardRef(() => OpportunityActivityService))
  private readonly opportunityActivityService!: OpportunityActivityService;

  async attachActivity(
    opportunityId: string,
    activityId: string,
    link?: OpportunityActivityLinkInput,
  ): Promise<OpportunityActivity> {
    return this.opportunityActivityService.attach(opportunityId, activityId, link);
  }

  async detachActivity(
    opportunityId: string,
    activityId: string,
  ): Promise<void> {
    return this.opportunityActivityService.detach(opportunityId, activityId);
  }

  async activitiesList(
    opportunityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<Array<{ entity: Activity; link: OpportunityActivity }>> {
    return this.opportunityActivityService.listAssoc('left', opportunityId, opts) as Promise<
      Array<{ entity: Activity; link: OpportunityActivity }>
    >;
  }

  async activitiesSetPrimary(
    opportunityId: string,
    activityId: string,
  ): Promise<void> {
    return this.opportunityActivityService.setPrimary(opportunityId, activityId);
  }


  // Inherited from SyncedEntityService:
  //   findById, findByIds, list, count, exists, create, update, delete
  //   findByExternalId, findAllByUserId, findVisibleByUserId



}
"
`;

exports[`junction emission snapshot — opportunity_activity (clean-lite-ps) emits activity.service.ts (right parent — junction accessor) 1`] = `
"// @generated by @pattern-stack/codegen from entities/activity.yaml — DO NOT EDIT. Hand edits are overwritten on re-emit. Regenerate with \`bun run codegen\`. To extend, use a pattern (src/patterns/*.pattern.ts) or the entity YAML.
import { Injectable, Inject, Optional } from '@nestjs/common';
// CGP-60 — junction service + types
import { OpportunityActivityService, OpportunityActivityLinkInput } from '../opportunity_activities/opportunity_activity.service';
import type { OpportunityActivity } from '../opportunity_activities/opportunity_activity.entity';

// CGP-60 — forwardRef resolves circular module dep (junction → parent)
import { forwardRef } from '@nestjs/common';

import type { Opportunity } from '../opportunities/opportunity.entity';

import { WithAnalytics } from '@shared/base-classes/with-analytics';
import { EVENT_BUS } from '@shared/constants/tokens';
import { ActivityEntityService } from '@shared/base-classes/activity-entity-service';
import { ActivityRepository } from './activity.repository';
import type { Activity } from './activity.entity';

@Injectable()
export class ActivityService extends WithAnalytics(
  ActivityEntityService<ActivityRepository, Activity>,
) {
  protected override readonly entityName = 'activity';

  /** Injected by NestJS when EventsModule is registered. */
  @Optional() @Inject(EVENT_BUS)
  protected override eventBus: any = undefined;

  constructor(
    protected override readonly repository: ActivityRepository,
  ) {
    super(repository);
  }

  // Lifecycle events (created/updated/deleted + per-field changes) are emitted
  // automatically by BaseService when the events subsystem is installed.
  //
  // ═══════════════════════════════════════════════════════════════════════
  // CGP-60 — fan-out to Opportunity (junction: opportunity_activity)
  // Delegates to OpportunityActivityService. See left-side block for the
  // forwardRef + per-junction marker rationale.
  // ═══════════════════════════════════════════════════════════════════════
  // junction:opportunity_activity:right-fan-out

  @Inject(forwardRef(() => OpportunityActivityService))
  private readonly opportunityActivityService!: OpportunityActivityService;

  async addToOpportunity(
    activityId: string,
    opportunityId: string,
    link?: OpportunityActivityLinkInput,
  ): Promise<OpportunityActivity> {
    return this.opportunityActivityService.attach(opportunityId, activityId, link);
  }

  async removeFromOpportunity(
    activityId: string,
    opportunityId: string,
  ): Promise<void> {
    return this.opportunityActivityService.detach(opportunityId, activityId);
  }

  async opportunitiesList(
    activityId: string,
    opts?: { cursor?: string; limit?: number },
  ): Promise<Array<{ entity: Opportunity; link: OpportunityActivity }>> {
    return this.opportunityActivityService.listAssoc('right', activityId, opts) as Promise<
      Array<{ entity: Opportunity; link: OpportunityActivity }>
    >;
  }

  async opportunitiesSetPrimary(
    activityId: string,
    opportunityId: string,
  ): Promise<void> {
    return this.opportunityActivityService.setPrimary(opportunityId, activityId);
  }


  // Inherited from ActivityEntityService:
  //   findById, findByIds, list, count, exists, create, update, delete
  //   findByDateRange, findByUserId, findByOpportunityId, findRecentByOpportunityId



}
"
`;
